[gd_scene load_steps=4 format=3 uid="uid://brgmmdxo246ar"]

[ext_resource type="Script" uid="uid://hvkrm6x58b2o" path="res://scripts/start_screen.gd" id="1_fn4xd"]
[ext_resource type="Script" uid="uid://cltrekprmv0j8" path="res://scripts/devices_list.gd" id="2_g4k3v"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pevhg"]
bg_color = Color(0.491664, 0.607615, 0.775621, 1)

[node name="StartScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fn4xd")

[node name="Background" type="Panel" parent="."]
clip_contents = true
layout_mode = 0
offset_right = 1283.0
offset_bottom = 724.0
theme_override_styles/panel = SubResource("StyleBoxFlat_pevhg")

[node name="Title" type="Label" parent="."]
layout_mode = 0
offset_left = 228.0
offset_top = 29.0
offset_right = 1086.0
offset_bottom = 112.0
theme_override_font_sizes/font_size = 50
text = "A Difficult Game About Ice Climbing"

[node name="Play_button" type="Button" parent="."]
layout_mode = 0
offset_left = 556.0
offset_top = 582.0
offset_right = 749.0
offset_bottom = 659.0
theme_override_font_sizes/font_size = 50
text = "Play"

[node name="Devices_list" type="ItemList" parent="."]
layout_mode = 0
offset_left = 397.0
offset_top = 190.0
offset_right = 931.0
offset_bottom = 485.0
select_mode = 1
item_count = 3
item_0/text = "asdfasdfawf"
item_1/text = "asdfweweqdqwdqwdqwdqwd"
item_2/text = "fgddfsgsdfgsdfgsdfg"
script = ExtResource("2_g4k3v")

[node name="Select_warning" type="Label" parent="."]
layout_mode = 0
offset_left = 500.0
offset_top = 159.0
offset_right = 816.0
offset_bottom = 182.0
text = "Please select 2 input devices to continue:"

[node name="How_to_button" type="Button" parent="."]
layout_mode = 0
offset_left = 812.0
offset_top = 592.0
offset_right = 924.0
offset_bottom = 648.0
theme_override_font_sizes/font_size = 25
text = "How to"

[connection signal="pressed" from="Play_button" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="How_to_button" to="." method="_on_how_to_button_pressed"]
